--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-hello world my name is nori.
+<h1>hi my name is nori</h1>
+<p>ich bin eine künstlerin aus der schweiz</p>
+<br>
+<p>ansonsten mag ich videospiele und meine Freunde</p>
