--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <p>ich bin eine künstlerin aus der schweiz</p>
 <br>
 <p>ansonsten mag ich videospiele und meine Freunde</p>
+
+https://images.services.local.ch/bp/localplace-logo/17/17eef1da6e9344e2b6ddeb8e8c1e047c3b5587a2/Meier%20Maler%20<img src="Logo_TD_bearbeitet.jpg?format=webp&quality=90&scale=fit&size=200x200&sig=7ad83fdc72d2c936adf0b2ef8271a86467890db5173ddbef22c1ad732c8fa261">
